--- a/app/views/portfolios/index.html.erb
+++ b/app/views/portfolios/index.html.erb
@@ -7,6 +7,6 @@
   <p><%= portfolio_item.subtitle %></p>
   <p><%= portfolio_item.body %></p>
   <%= image_tag portfolio_item.thumb_image unless portfolio_item.thumb_image.nil? %>
-  <td><%= link_to 'Edit', edit_portfolio_path(portfolio_item.id) %></td>
-  <td><%= link_to 'Delete Portfolio Item', portfolio_path(portfolio_item.id), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+  <td><%= link_to 'Edit', edit_portfolio_path(portfolio_item) %></td>
+  <td><%= link_to 'Delete Portfolio Item', portfolio_path(portfolio_item), method: :delete, data: { confirm: 'Are you sure?' } %></td>
 <% end %>
