--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,2 +1,8 @@
 <h1>Pages#contact</h1>
-<p>Find me in app/views/pages/contact.html.erb</p>
+
+<p><%= number_to_phone "555-555-5555" %></p>
+
+<p><%= number_to_currency "15000" %></p>
+
+<p><%= number_with_delimiter "478620346028364" %></p>
+
