Refactored before action for portfolio setting

--- a/app/views/blogs/_form.html.erb
+++ b/app/views/blogs/_form.html.erb
@@ -21,6 +21,9 @@
     <%= form.text_area :body, id: :blog_body %>
   </div>
 
+
+  <input name="blog[topic_id]" placeholder="input topic id">
+
   <div class="actions">
     <%= form.submit %>
   </div>
