Integrate new gem into rails app for copyright

--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,8 +1,8 @@
 <h1>Pages#contact</h1>
 
-<p><%= number_to_phone "555-555-5555" %></p>
+<!--<p><%= number_to_phone "555-555-5555" %></p>-->
 
-<p><%= number_to_currency "15000" %></p>
+<!--<p><%= number_to_currency "15000" %></p>-->
 
-<p><%= number_with_delimiter "478620346028364" %></p>
+<!--<p><%= number_with_delimiter "478620346028364" %></p>-->
 
